--- a/style.css
+++ b/style.css
@@ -449,15 +449,15 @@ textarea.input {
     position: relative;
 }
 
-.header-search form .input-select {
+/* .header-search form .input-select {
     margin-right: -4px;
     border-radius: 40px 0px 0px 40px;
-}
+} */
 
-.header-search form .input {
+/* .header-search form .input {
     width: calc(100% - 260px);
     margin-right: -4px;
-}
+} */
 
 .header-search form .search-btn {
     height: 40px;
