--- a/style.css
+++ b/style.css
@@ -475,7 +475,7 @@ textarea.input {
 ===========================================================*/
 
 .my-navbar>.navbar {
-    height: 70px;
+    /* height: 70px; */
     text-transform: uppercase;
     font-size: 15px;
     font-weight: 700;
